kubernetes/radarr/prod-d1/ani-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aniradarr
  name: radarr
  namespace: radarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aniradarr
  template:
    metadata:
      labels:
        app: aniradarr
    spec:
      containers:
        - name: aniradarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
          - name: http
            containerPort: 7878
          volumeMounts:
          - name: aniradarr-config
            mountPath: /config
          - name: data
            mountPath: /data
      volumes:
        - name: aniradarr-config
          persistentVolumeClaim:
            claimName: aniradarr-pvc
            readOnly: false
        - name: data
          nfs:
            server: 10.15.21.132
            path: /mnt/user/video/
