kubernetes/radarr/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr
  namespace: prowlarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
          - name: http
            containerPort: 7878
          volumeMounts:
          - name: radarr-config
            mountPath: /config
          - name: data
            mountPath: /data
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-pvc
            readOnly: false
        - name: data
          nfs:
            server: 10.15.21.132
            path: /mnt/user/video/
