kubernetes/radarr/prod-d1/ani-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aniradarr-web
  namespace: radarr
  labels:
    app: aniradarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
  selector:
    app: aniradarr
