kubernetes/radarr/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: radarr
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: radarr.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-web
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr.kube-prod-d1.mclacken.net
      secretName: radarr-certificate-secret
